--- a/src/main/resources/app/main.fxml
+++ b/src/main/resources/app/main.fxml
@@ -21,7 +21,7 @@
             <Pane fx:id="drawPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="688.0" prefWidth="990.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
          </children>
       </AnchorPane>
-      <BorderPane maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="83.0" prefWidth="990.0" style="-fx-background-color: white;">
+      <BorderPane maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="83.0" prefWidth="990.0" style="-fx-background-color: #ffffff;">
          <center>
             <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="82.0" prefWidth="990.0" scaleShape="false" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
                <children>
