--- a/src/main/resources/app/main.fxml
+++ b/src/main/resources/app/main.fxml
@@ -14,59 +14,70 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="BOTTOM_CENTER" prefHeight="800.0" prefWidth="1000.0" spacing="5.0" style="-fx-background-color: lightgray;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.controllers.Controller">
-   <children>
-      <AnchorPane prefHeight="687.0" prefWidth="990.0" style="-fx-background-color: white;" VBox.vgrow="ALWAYS">
-         <children>
-            <Pane fx:id="drawPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="688.0" prefWidth="990.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-         </children>
-      </AnchorPane>
-      <BorderPane maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="83.0" prefWidth="990.0" style="-fx-background-color: #ffffff;">
-         <center>
-            <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="82.0" prefWidth="990.0" scaleShape="false" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
-               <children>
-                  <GridPane alignment="CENTER" hgap="10.0" layoutY="17.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="82.0" prefWidth="990.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+<VBox fx:id="stage" alignment="BOTTOM_CENTER" prefHeight="800.0" prefWidth="1000.0" spacing="5.0"
+      style="-fx-background-color: lightgray;" xmlns="http://javafx.com/javafx/15.0.1"
+      xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.controllers.Controller">
+    <padding>
+        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+    </padding>
+    <AnchorPane prefHeight="687.0" prefWidth="990.0" style="-fx-background-color: white;" VBox.vgrow="ALWAYS">
+        <Pane fx:id="drawPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+              prefHeight="688.0" prefWidth="990.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+              AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"/>
+    </AnchorPane>
+    <BorderPane maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"
+                prefHeight="83.0" prefWidth="990.0" style="-fx-background-color: #ffffff;">
+        <center>
+            <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+                        prefHeight="82.0" prefWidth="990.0" scaleShape="false" style="-fx-background-color: white;"
+                        BorderPane.alignment="CENTER">
+                <GridPane alignment="CENTER" hgap="10.0" layoutY="17.0" maxHeight="-Infinity" maxWidth="-Infinity"
+                          minHeight="-Infinity" minWidth="-Infinity" prefHeight="82.0" prefWidth="990.0"
+                          AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
+                          AnchorPane.topAnchor="0.0">
                     <columnConstraints>
-                      <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="202.0" minWidth="10.0" prefWidth="165.0" />
-                      <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="567.0" minWidth="10.0" prefWidth="362.0" />
-                        <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="457.0" minWidth="10.0" prefWidth="374.0" />
-                        <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="319.0" minWidth="10.0" prefWidth="52.0" />
+                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="202.0" minWidth="10.0"
+                                           prefWidth="165.0"/>
+                        <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="567.0" minWidth="10.0"
+                                           prefWidth="362.0"/>
+                        <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="457.0" minWidth="10.0"
+                                           prefWidth="374.0"/>
+                        <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="319.0" minWidth="10.0"
+                                           prefWidth="52.0"/>
                     </columnConstraints>
                     <rowConstraints>
-                      <RowConstraints maxHeight="43.0" minHeight="10.0" prefHeight="34.0" valignment="BOTTOM" />
-                      <RowConstraints maxHeight="60.0" minHeight="10.0" prefHeight="45.0" valignment="TOP" vgrow="NEVER" />
+                        <RowConstraints maxHeight="43.0" minHeight="10.0" prefHeight="34.0" valignment="BOTTOM"/>
+                        <RowConstraints maxHeight="60.0" minHeight="10.0" prefHeight="45.0" valignment="TOP"
+                                        vgrow="NEVER"/>
                     </rowConstraints>
-                     <children>
-                        <ChoiceBox fx:id="cbox" prefWidth="150.0" GridPane.rowIndex="1" />
-                        <TextField fx:id="controlPoints" prefHeight="3.0" prefWidth="248.0" promptText="x1, y1, x2, y2, x3, y3, ..., xn, yn" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <TextField fx:id="knotVector" prefHeight="25.0" prefWidth="173.0" GridPane.columnIndex="2" GridPane.hgrow="NEVER" GridPane.rowIndex="1" GridPane.vgrow="NEVER" />
-                        <Button mnemonicParsing="false" onAction="#drawOnAction" text="Draw" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-                        <Label text="Select Curve Type:">
-                           <font>
-                              <Font name="System Bold" size="12.0" />
-                           </font>
-                        </Label>
-                        <Label text="Control Points:" GridPane.columnIndex="1">
-                           <font>
-                              <Font name="System Bold" size="12.0" />
-                           </font>
-                        </Label>
-                        <Label text="Knotvector:" GridPane.columnIndex="2">
-                           <font>
-                              <Font name="System Bold" size="12.0" />
-                           </font>
-                        </Label>
-                     </children>
-                     <padding>
-                        <Insets left="5.0" right="5.0" top="5.0" />
-                     </padding>
-                  </GridPane>
-               </children>
+                    <padding>
+                        <Insets left="5.0" right="5.0" top="5.0"/>
+                    </padding>
+                    <ChoiceBox fx:id="cbox" prefWidth="150.0" GridPane.rowIndex="1"/>
+                    <TextField fx:id="controlPoints" prefHeight="3.0" prefWidth="248.0"
+                               promptText="x1, y1, x2, y2, x3, y3, ..., xn, yn" GridPane.columnIndex="1"
+                               GridPane.rowIndex="1"/>
+                    <TextField fx:id="knotVector" prefHeight="25.0" prefWidth="173.0" GridPane.columnIndex="2"
+                               GridPane.hgrow="NEVER" GridPane.rowIndex="1" GridPane.vgrow="NEVER"/>
+                    <Button mnemonicParsing="false" onAction="#drawOnAction" text="Draw" GridPane.columnIndex="3"
+                            GridPane.rowIndex="1"/>
+                    <Label text="Select Curve Type:">
+                        <font>
+                            <Font name="System Bold" size="12.0"/>
+                        </font>
+                    </Label>
+                    <Label text="Control Points:" GridPane.columnIndex="1">
+                        <font>
+                            <Font name="System Bold" size="12.0"/>
+                        </font>
+                    </Label>
+                    <Label text="Knotvector:" GridPane.columnIndex="2">
+                        <font>
+                            <Font name="System Bold" size="12.0"/>
+                        </font>
+                    </Label>
+                </GridPane>
             </AnchorPane>
-         </center>
-      </BorderPane>
-   </children>
-   <padding>
-      <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-   </padding>
+        </center>
+    </BorderPane>
 </VBox>
